--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -8,9 +8,12 @@
   },
   "AllowedHosts": "*",
   "ServiceUrls": {
-    "ProductAPI": "https://localhost:44302",
     "IdentityAPI": "https://localhost:44397",
-    "ShoppingCartAPI": "https://localhost:44360",
-    "CouponAPI": "https://localhost:44344"
+    //"ProductAPI": "https://localhost:44302",
+    //"ShoppingCartAPI": "https://localhost:44360",
+    //"CouponAPI": "https://localhost:44344"
+    "ProductAPI": "https://localhost:5050",
+    "ShoppingCartAPI": "https://localhost:5050",
+    "CouponAPI": "https://localhost:5050"
   }
 }
