--- a/Mango.Services.CouponAPI/appsettings.json
+++ b/Mango.Services.CouponAPI/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-18553NB0;Initial Catalog=MangoCouponAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=GDL-I4644;Initial Catalog=MangoCouponAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
