--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=LAPTOP-18553NB0;Initial Catalog=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=GDL-I4644;Initial Catalog=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "ServiceUrls": {
+    "CouponAPI": "https://localhost:44344"
   }
 }
